--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,138 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.container{
+  display: flex;
+  height: 100vh;
+
+  border: 2px solid black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sidebar{
+  border: 2px solid orange;
+  width: 8%;
+  max-width: 200px;
+  min-width: fit-content;
+  /* padding: 5rem; */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.body{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  width: 100%;
+  /* height: 100%; */
+  border: 2px solid blue;
+}
+
+.header{
+  border: 2px solid pink;
+}
+
+.main{
+  border: 2px solid magenta;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+
+/* everything popup */
+.popupContainer{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  display: none;      /*chage to none or flex*/
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  color: whitesmoke;
+
+
+
+  background-color: rgba(8, 8, 20, 0.644);
+
 }
 
-.App-link {
-  color: #61dafb;
+.addTaskWindow{
+  display: flex;
+  flex-direction: column;
+  gap: .3rem;
+  padding: 1rem;
+
+  background-color: black;
+
+
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.defaultInputBox{
+  height: 1.8rem;
+  outline: none;
+  padding: .5rem;
+  border-radius: 3px;
+  border: none;
+  width: 100%;
+}
+
+.descInputBox{
+  outline: none;
+  padding: .5rem;
+  border-radius: 3px;
+  border: none;
+  resize: none;
+
+}
+
+
+.addTaskWindow button{
+  /* display: block; */
+  margin-top: .5rem;
+  padding: .5rem;
+  border-radius: 50px;
+  border: none;
+  cursor: pointer;
+}
+
+.addTaskWindow .deleteSubtaskBtn{
+  border-radius: 0;
+  padding: .3rem;
+  margin-top: 0;
+}
+
+.subInput-close{
+  display: flex;
+  align-items: center;
+  gap: .5rem;  
+  width: 100%;
+  justify-content: space-between;
+
+}
+
+.popupHeader{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
+.popupHeader button{
+  margin-top: 0;
+  border-radius: 0;
+  border: none;
+  cursor: pointer;
+}
+
+.subtaskContainer{
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+}
+
+
+/* sidebar */
+.createBoardBtn{
+  cursor: pointer;
 }
