--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,9 @@
   padding: 0;
 }
 
-
+body{
+  background-color: rgba(128, 128, 128, 0.753);
+}
 .container{
   display: flex;
   height: 100vh;
@@ -41,7 +43,8 @@
 
 
 /* everything popup */
-.popupContainer{
+.popupContainer,
+.add-card-container{
   position: absolute;
   height: 100%;
   width: 100%;
@@ -56,7 +59,8 @@
 
 }
 
-.addTaskWindow{
+.addTaskWindow,
+.add-card-window{
   display: flex;
   flex-direction: column;
   gap: .3rem;
@@ -135,4 +139,33 @@
 /* sidebar */
 .createBoardBtn{
   cursor: pointer;
+}
+
+/* main display */
+
+.todo-container,
+.doing-container,
+.done-container{
+  display: flex;
+  flex-direction: column;
+  gap:.5rem;
+
+  /* flex-wrap: wrap; */
+
+
+  /* background-color: orange; */
+}
+
+.card{
+  background-color: grey;
+  padding: .6rem;
+  border-radius: 5px;
+  cursor: pointer;
+
+  border: 2px solid red;
+}
+
+.card p{
+  max-width: 10rem;
+
 }
