--- a/src/App.css
+++ b/src/App.css
@@ -4,22 +4,41 @@
   padding: 0;
 }
 
-body{
-  background-color: rgba(128, 128, 128, 0.753);
+:root{
+  --main-bg-color: #0c042ea8;
+  --sidebar-bg-color: #0d1d47;
+  --card-bg-color: #00A9C7 ;
+  --accent-color:black;
 }
+
+body{
+  color: whitesmoke;
+}
+
+button:hover{
+  opacity: .7;
+
+}
+
+ul{
+  list-style-type: none;
+  list-style-position: inside;
+}
+
 .container{
   display: flex;
   height: 100vh;
 
-  border: 2px solid black;
 }
 
 .sidebar{
-  border: 2px solid orange;
+  border-right: 1px solid white ;
   width: 8%;
   max-width: 200px;
   min-width: fit-content;
-  /* padding: 5rem; */
+  background-color: var(--sidebar-bg-color);
+  color: whitesmoke;
+  padding: 1.5rem;
 }
 
 .body{
@@ -27,18 +46,28 @@ body{
   flex-direction: column;
   width: 100%;
   /* height: 100%; */
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
 }
 
 .header{
-  border: 2px solid pink;
+  background-color:var(--sidebar-bg-color);
+  padding: 1rem 0 1rem 1rem;
+  border-bottom: 1px solid white;
+  display: flex;
+  gap: 1rem;
+
 }
 
 .main{
-  border: 2px solid magenta;
+  /* border: 2px solid magenta; */
   height: 100%;
   display: flex;
   justify-content: space-around;
+  color: whitesmoke;
+  background-image: linear-gradient(#B3CDD1,#797fa3);
+
+  /* color: whitesmoke;
+  background-image: linear-gradient(#B3CDD1,#797fa3); */
 }
 
 
@@ -139,13 +168,51 @@ body{
   gap: .5rem;
 }
 
+/* header */
+.trashcan{
+  font-size: 1.5rem;
+  color: whitesmoke;  
+  align-self: center;
+  cursor: pointer;
+
+}
+
+.trashcan:hover{
+  color: red;
+}
 
 /* sidebar */
-.createBoardBtn{
+.board-btn{
+  color: whitesmoke;
+  font-size: 1rem;
+  background-color: #5e56d1cc;
+  border: none;
+  border-radius: 5px;
+  padding: .5rem;
+  margin-top: .7rem;
   cursor: pointer;
 }
 
+.add-card-btn,
+.createBoardBtn{
+  cursor: pointer;
+  margin-top: .5rem;
+  border: none;
+  background-color: transparent;
+  color: rgb(32, 153, 184);
+  font-weight: bold;
+  font-size: 1rem;
+}
+
+
 /* main display */
+.main h2{
+  color: black;
+}
+
+.add-card-btn{
+  color: var(--accent-color);
+}
 
 .todo-container,
 .doing-container,
@@ -153,20 +220,15 @@ body{
   display: flex;
   flex-direction: column;
   gap:.5rem;
-
-  /* flex-wrap: wrap; */
-
-
-  /* background-color: orange; */
 }
 
 .card{
-  background-color: grey;
+  background-color: var(--card-bg-color);
   padding: .6rem;
   border-radius: 5px;
   cursor: pointer;
+  word-wrap: break-word;
 
-  border: 2px solid red;
 }
 
 .card p{
@@ -174,4 +236,7 @@ body{
 
 }
 
+.card:hover{
+  transform: translateX(5%);
+}
 
