--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-*{
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-:root{
+:root {
   --main-bg-color: #0c042ea8;
   --sidebar-bg-color: #0d1d47;
-  --card-bg-color: #00A9C7 ;
-  --accent-color:black;
+  --card-bg-color: #00a9c7;
+  --accent-color: black;
 }
 
-body{
+body {
   color: whitesmoke;
 }
 
-button:hover{
-  opacity: .7;
-
+button:hover {
+  opacity: 0.7;
 }
 
-ul{
+ul {
   list-style-type: none;
   list-style-position: inside;
 }
 
-.container{
+.container {
   display: flex;
   height: 100vh;
-
 }
 
-.sidebar{
-  border-right: 1px solid white ;
+.sidebar {
+  border-right: 1px solid white;
   width: 8%;
   max-width: 200px;
   min-width: fit-content;
@@ -41,164 +39,147 @@ ul{
   padding: 1.5rem;
 }
 
-.body{
+.body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  /* height: 100%; */
-  /* border: 2px solid blue; */
 }
 
-.header{
-  background-color:var(--sidebar-bg-color);
+.header {
+  background-color: var(--sidebar-bg-color);
   padding: 1rem 0 1rem 1rem;
   border-bottom: 1px solid white;
   display: flex;
   gap: 1rem;
-
 }
 
-.main{
-  /* border: 2px solid magenta; */
+.main {
   height: 100%;
   display: flex;
   justify-content: space-around;
   color: whitesmoke;
-  background-image: linear-gradient(#B3CDD1,#797fa3);
-
-  /* color: whitesmoke;
-  background-image: linear-gradient(#B3CDD1,#797fa3); */
+  background-image: linear-gradient(#b3cdd1, #797fa3);
 }
-
 
 /* everything popup */
 .popupContainer,
-.add-card-container{
+.add-card-container {
   position: absolute;
   height: 100%;
   width: 100%;
-  display: none;      /*chage to none or flex*/
+  display: none;
+  /*chage to none or flex*/
   justify-content: center;
   align-items: center;
   color: whitesmoke;
 
-
-
   background-color: rgba(8, 8, 20, 0.644);
-
 }
 
 .addTaskWindow,
-.add-card-window{
+.add-card-window {
   display: flex;
   flex-direction: column;
-  gap: .3rem;
+  gap: 0.3rem;
   padding: 1rem;
 
-  background-color: black;
+  font-size: 1.5rem;
 
-
-
+  background-color: rgb(23, 108, 114);
 }
 
-.defaultInputBox{
+.defaultInputBox {
   height: 1.8rem;
   outline: none;
-  padding: .5rem;
+  padding: 0.5rem;
   border-radius: 3px;
   border: none;
   width: 100%;
 }
 
-.descInputBox{
+.descInputBox {
   outline: none;
-  padding: .5rem;
+  padding: 0.5rem;
   border-radius: 3px;
   border: none;
   resize: none;
-
 }
 
-
 .addTaskWindow button,
-.add-card-window button{
-  /* display: block; */
-  margin-top: .5rem;
-  padding: .5rem;
+.add-card-window button {
+  margin-top: 0.5rem;
+  padding: 0.5rem;
   border-radius: 50px;
   border: none;
   cursor: pointer;
 }
 
-.addTaskWindow .deleteSubtaskBtn{
+.addTaskWindow .deleteSubtaskBtn {
   border-radius: 0;
-  padding: .3rem;
+  padding: 0.3rem;
   margin-top: 0;
 }
 
-.subInput-close{
+.subInput-close {
   display: flex;
   align-items: center;
-  gap: .5rem;  
+  gap: 0.5rem;
   width: 100%;
   justify-content: space-between;
-
 }
 
 .popupHeader,
-.add-card-header{
+.add-card-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-
 }
 
 .popupHeader button,
-.add-card-header button
-{
+.add-card-header button {
   margin-top: 0;
   border-radius: 0;
   border: none;
   cursor: pointer;
+  margin-left: 1rem;
 }
 
-.subtaskContainer{
+.subtaskContainer {
   display: flex;
   flex-direction: column;
-  gap: .5rem;
+  gap: 0.5rem;
 }
 
 /* header */
-.trashcan{
+.trashcan {
   font-size: 1.5rem;
-  color: whitesmoke;  
+  color: whitesmoke;
   align-self: center;
   cursor: pointer;
-
 }
 
-.trashcan:hover{
+.trashcan:hover {
   color: red;
 }
 
 /* sidebar */
-.board-btn{
+.board-btn {
   color: whitesmoke;
   font-size: 1rem;
   background-color: #5e56d1cc;
   border: none;
   border-radius: 5px;
-  padding: .5rem;
-  margin-top: .7rem;
+  padding: 0.5rem;
+  margin-top: 0.7rem;
   cursor: pointer;
   max-width: 200px;
   word-wrap: break-word;
 }
 
 .add-card-btn,
-.createBoardBtn{
+.createBoardBtn {
   cursor: pointer;
-  margin-top: .5rem;
+  margin-top: 0.5rem;
   border: none;
   background-color: transparent;
   color: rgb(32, 153, 184);
@@ -206,39 +187,35 @@ ul{
   font-size: 1rem;
 }
 
-
 /* main display */
-.main h2{
+.main h2 {
   color: black;
 }
 
-.add-card-btn{
+.add-card-btn {
   color: var(--accent-color);
 }
 
 .todo-container,
 .doing-container,
-.done-container{
+.done-container {
   display: flex;
   flex-direction: column;
-  gap:.5rem;
+  gap: 0.5rem;
 }
 
-.card{
+.card {
   background-color: var(--card-bg-color);
-  padding: .6rem;
+  padding: 0.6rem;
   border-radius: 5px;
   cursor: pointer;
   word-wrap: break-word;
-
 }
 
-.card p{
+.card p {
   max-width: 10rem;
-
 }
 
-.card:hover{
+.card:hover {
   transform: translateX(5%);
 }
-
