--- a/src/App.css
+++ b/src/App.css
@@ -73,12 +73,22 @@ nav{
 }
 
 .title-container h1{
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 
 .chevron-down{
   cursor: pointer;
-  height: 10px;
+  min-height: 15px;
+}
+
+.vertical-ellipsis{
+  min-width: 7px;
+  cursor: pointer;
+}
+
+.vertical-ellipsis:hover,
+.chevron-down:hover{
+ scale: 1.1; 
 }
 
 .controls-container{
@@ -109,6 +119,7 @@ nav{
   cursor: pointer;
   min-height: 25px;
   min-width: 25px;
+  margin-left: 1.5rem;
 }
 
 .trashcan:hover{
@@ -219,6 +230,7 @@ nav{
   color: white;
   background-color: #000112d2;
   display: none;
+  z-index: 999;
 }
 
 .add-task-card{
@@ -358,6 +370,47 @@ nav{
 }
 /* <AddCardPopup /> end */
 
+/* <DescPopup />  */
+.desc-card{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  background-color: var(--bg);
+  padding: 1rem;
+}
+
+.desc-card-header{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.edit-desc-box{
+  /* same as add-task-form input  */
+  background-color: transparent;
+  border: 1px solid var(--gray-text);
+  color: inherit;
+  padding: .5rem;
+  outline: none;
+  border-radius: 5px;
+}
+
+.delete-board-btn{
+  font-size: 1.3rem;
+  background-color: var(--btnDestructive);
+  color: white;
+  border: none;
+  border-radius: 15px;
+  padding: .3rem .5rem;
+  cursor: pointer;
+}
+
+.close-desc-popup-btn:hover{
+  background-color: var(--btnDestructiveHover);
+}
+/* <DescPopup /> end  */
+
+
 
 /* <BoardList /> */
 
@@ -393,6 +446,7 @@ nav{
   display: flex;
   flex-direction: column;
   gap: .8rem;
+  margin-bottom: 1rem;
 
 }
 
@@ -488,6 +542,11 @@ nav{
   .light .add-card-btn{
     color: white;
   }
+
+  .light .desc-card{
+    background-color: white;
+    color: black;
+  }
 /* light theme end  */
 
 
@@ -552,7 +611,6 @@ input:checked + .slider:before {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 1rem;
 }
 
 .mode-icon{
@@ -561,10 +619,12 @@ input:checked + .slider:before {
 
 .dark-icon{
   margin-right: .5rem;
+  height: 25px;
 }
 
 .light-icon{
   margin-left: .5rem;
+  height: 25px;
 }
 
 /* <LightDarkToggle /> end  */
